--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,4 @@
-User Name: <input type="text" name="username">
-Password : <input type="password" name="password">
+User Name: <input type="text" name="username" [(ngModel)]="username">
+Password : <input type="password" name="password" [(ngModel)]="password">
+
+<button (click)="handleLogin()">Login</button>
