added *ngif validation credentials hardcoded

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,9 @@
+<small *ngIf="invalidLogin">{{errorMessage}}</small>
+
+<div>
 User Name: <input type="text" name="username" [(ngModel)]="username">
 Password : <input type="password" name="password" [(ngModel)]="password">
 
 <button (click)="handleLogin()">Login</button>
+
+</div>
