--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -2,14 +2,16 @@
   <caption>My Todo's</caption>
   <thead>
   <tr>
-    <th>id</th>
-    <th>description</th>
+    <th>Description</th>
+    <th>Target Date</th>
+    <th>Completed</th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let todo of todos">
-    <th>{{todo.id}}</th>
-    <th>{{todo.description}}</th>
+    <td>{{todo.description}}</td>
+    <td>{{todo.targetDate | date}}</td>
+    <td>{{todo.done}}</td>
   </tr>
   
   </tbody>
