added bootstrap to the menu

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,16 @@
-TOP MENU ELEMENTS <br><br>
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div>
+      <a href="https://in28minutes.com" class="navbar-brand">In28minutes</a>
+    </div>
+    <ul class="navbar-nav">
+      <li><a class="nav-link" href="/welcome">Home</a></li>
+      <li><a class="nav-link" href="/todos">Todos</a></li>
+    </ul>
+    <ul class="navbar-nav navbar-collapse justify-content-end">
+      <li><a class="nav-link" href="/login">Login</a></li>
+      <li><a class="nav-link" href="/logout">Logout</a></li>
+    </ul>
+  </nav>
+</header>
+
