customized the footer and changed the routes from href to router-link

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,5 @@
-<br><br>
-
-FOOTER
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted">All rights reserved 2018 @stefanbanu</span>
+  </div>
+</footer>
