--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,13 @@
-<small *ngIf="invalidLogin">{{errorMessage}}</small>
+<h1>Login!</h1>
 
-<div>
-User Name: <input type="text" name="username" [(ngModel)]="username">
-Password : <input type="password" name="password" [(ngModel)]="password">
+<div class="container">
+  <div class="alert alert-warning" *ngIf="invalidLogin">{{errorMessage}}</div>
 
-<button (click)="handleLogin()">Login</button>
+  <div>
+    User Name: <input type="text" name="username" [(ngModel)]="username">
+    Password : <input type="password" name="password" [(ngModel)]="password">
 
+    <button (click)="handleLogin()" class="btn btn-success">Login</button>
+
+  </div>
 </div>
