--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,5 @@
-welcome to our app {{name}}
+<h1>Welcome!</h1>
 
-<div>
-  You can manage your todos <a routerLink="/todos">here</a>
+<div class="container">
+  welcome to our app {{name}}.You can manage your todos <a routerLink="/todos">here</a>
 </div>
