--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-
 <app-menu></app-menu>
 
-<router-outlet></router-outlet>
+<div class="container">
+
+  <router-outlet></router-outlet>
+</div>
 
 <app-footer></app-footer>
