--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -1,20 +1,23 @@
-<table border="1">
-  <caption>My Todo's</caption>
-  <thead>
-  <tr>
-    <th>Description</th>
-    <th>Target Date</th>
-    <th>Completed</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let todo of todos">
-    <td>{{todo.description}}</td>
-    <td>{{todo.targetDate | date}}</td>
-    <td>{{todo.done}}</td>
-  </tr>
-  
-  </tbody>
+<h1>My Todo's</h1>
+
+<div class="container">
+  <table class="table">
+    <thead>
+    <tr>
+      <th>Description</th>
+      <th>Target Date</th>
+      <th>Completed</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let todo of todos">
+      <td>{{todo.description}}</td>
+      <td>{{todo.targetDate | date}}</td>
+      <td>{{todo.done}}</td>
+    </tr>
+
+    </tbody>
 
 
-</table>
+  </table>
+</div>
