--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,12 +4,12 @@
       <a href="https://in28minutes.com" class="navbar-brand">In28minutes</a>
     </div>
     <ul class="navbar-nav">
-      <li><a class="nav-link" href="/welcome">Home</a></li>
-      <li><a class="nav-link" href="/todos">Todos</a></li>
+      <li><a class="nav-link" routerLink="/welcome/stefan">Home</a></li>
+      <li><a class="nav-link" routerLink="/todos">Todos</a></li>
     </ul>
     <ul class="navbar-nav navbar-collapse justify-content-end">
-      <li><a class="nav-link" href="/login">Login</a></li>
-      <li><a class="nav-link" href="/logout">Logout</a></li>
+      <li><a class="nav-link" routerLink="/login">Login</a></li>
+      <li><a class="nav-link" routerLink="/logout">Logout</a></li>
     </ul>
   </nav>
 </header>
