--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,12 +4,12 @@
       <a href="https://in28minutes.com" class="navbar-brand">In28minutes</a>
     </div>
     <ul class="navbar-nav">
-      <li><a class="nav-link" routerLink="/welcome/stefan">Home</a></li>
-      <li><a class="nav-link" routerLink="/todos">Todos</a></li>
+      <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/welcome/stefan" class="nav-link" >Home</a></li>
+      <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/todos" class="nav-link">Todos</a></li>
     </ul>
     <ul class="navbar-nav navbar-collapse justify-content-end">
-      <li><a class="nav-link" routerLink="/login">Login</a></li>
-      <li><a class="nav-link" routerLink="/logout">Logout</a></li>
+      <li><a *ngIf="!hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/login" class="nav-link" >Login</a></li>
+      <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/logout" class="nav-link" >Logout</a></li>
     </ul>
   </nav>
 </header>
