added the connection between front and back by returning the message from service to angular.

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -8,3 +8,6 @@
   <h1>Click here</h1>
   <button (click)="getWelcomeMessage()" class="btn btn-success">Get welcome message</button>
 </div>
+<div class="container" *ngIf="welcomeMessageFromService">
+  <h2>Your message</h2>
+{{welcomeMessageFromService}}</div>
