--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -10,4 +10,5 @@
 </div>
 <div class="container" *ngIf="welcomeMessageFromService">
   <h2>Your message</h2>
-{{welcomeMessageFromService}}</div>
+  {{welcomeMessageFromService}}
+</div>
