Added error message from backend to the view calling getMessage with parameter method.

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -6,7 +6,7 @@
 
 <div class="container">
   <h1>Click here</h1>
-  <button (click)="getWelcomeMessage()" class="btn btn-success">Get welcome message</button>
+  <button (click)="getWelcomeMessageWithParameter()" class="btn btn-success">Get welcome message</button>
 </div>
 <div class="container" *ngIf="welcomeMessageFromService">
   <h2>Your message</h2>
