--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,3 +1,16 @@
-<p>
-  todo works!
-</p>
+<H1>Todo</H1>
+
+<div class="container">
+  <fieldset class="form-group">
+    <label>Description</label>
+    <input class="form-control" [(ngModel)]="todo.description" type="text" name="description" required="required">
+  </fieldset>
+
+  <fieldset class="form-group">
+    <label>Target Date</label>
+  <input class="form-control" [(ngModel)]="todo.targetDate" type="date" name="targetDate" required="required">
+  </fieldset>
+
+  <button class="btn btn-success"(click)="saveTodo()">Save</button>
+
+</div>
