--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,8 @@
     User Name: <input type="text" name="username" [(ngModel)]="username">
     Password : <input type="password" name="password" [(ngModel)]="password">
 
-    <button (click)="handleLogin()" class="btn btn-success">Login</button>
+<!--    <button (click)="handleLogin()" class="btn btn-success">Login</button>-->
+    <button (click)="handleBasicAuthLogin()" class="btn btn-success">Login</button>
 
   </div>
 </div>
