--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,8 @@
     Password : <input type="password" name="password" [(ngModel)]="password">
 
 <!--    <button (click)="handleLogin()" class="btn btn-success">Login</button>-->
-    <button (click)="handleBasicAuthLogin()" class="btn btn-success">Login</button>
+<!--    <button (click)="handleBasicAuthLogin()" class="btn btn-success">Login</button>-->
+    <button (click)="handleJWTAuthLogin()" class="btn btn-success">Login</button>
 
   </div>
 </div>
